<resources>
    <string name="app_name">Satellites App</string>

    <string name="height_mass">Height/Mass:</string>
    <string name="cost">Cost:</string>
    <string name="last_position">Last Position:</string>
    <string name="active">Active</string>
    <string name="passive">Passive</string>

    <string name="active_passive_icon_desc">Active, Passive Icon</string>

    <string name="search">Search</string>

    <string name="okay">Okay</string>

    <string name="something_went_wrong">Something went wrong!</string>

    <string name="satellite_not_found">Satellite not found!</string>

    <string name="progress_bar_transition">Progress Bar Transition</string>
    <string name="progress_bar_animation">Progress Bar Animation</string>

    <string name="loading_satellites">Loading Satellites</string>
    <string name="loading_detail">Loading Detail</string>
</resources>